feat: stats endpoint returns events and deadline in the span given in query params
