# src/main/java/mg/improve/todo/domain/dto/response/StatsResponse.java
@@ -1,9 +1,13 @@
 package mg.improve.todo.domain.dto.response;
 
+import java.util.List;
+
 public record StatsResponse(
 		long undoneTodoCount,
 		long upcomingEventCount,
 		String upcomingEventsTotalLength,
-		TodoResponse closestDeadlineTodo
+		TodoResponse closestDeadlineTodo,
+		List<EventResponse> events,
+		List<TodoResponse> deadlines
 	) {
 }
