# src/main/java/mg/improve/todo/endpoint/rest/StatsController.java
@@ -1,12 +1,15 @@
 package mg.improve.todo.endpoint.rest;
 
+import java.time.Instant;
 import java.util.UUID;
 
 import mg.improve.todo.domain.dto.response.StatsResponse;
 import mg.improve.todo.service.StatsService;
 
+import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -19,7 +22,10 @@ public class StatsController {
 	}
 
 	@GetMapping("/stats")
-	public StatsResponse getStats(@AuthenticationPrincipal UUID userId) {
-		return statsService.getStats(userId);
+	public StatsResponse getStats(
+			@AuthenticationPrincipal UUID userId,
+			@RequestParam(value = "from", required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) Instant from,
+			@RequestParam(value = "to", required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) Instant to) {
+		return statsService.getStats(userId, from, to);
 	}
 }
